--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "class-variance-authority": "^0.5.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "encoding": "^0.1.13",
     "lucide-react": "^0.137.0",
     "nanoid": "^4.0.2",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
     "postcss": "8.4.21",
+    "pusher": "^5.1.2",
+    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
